correction priorité z-index

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ nav{
     width: 100%;
     height: 80px;
     background-color: #0d0d0dcf;
+
+    z-index: 2;
 }
 
 #logo{
